--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--boostrap-->
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!--estilos propios-->
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 <div>
     <!--Aca empeiza el header-->
-    <header>
+    <header data-aos="fade-down" data-aos-duration="1000">
         <nav class="navbar navbar-expand-lg navbar-expand-md bg-black">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html"><img src="images/logo_chico.JPG" alt=""></a>
@@ -52,19 +53,23 @@
             <div class="seccion__container h-100">
             <div class="d-flex h-100 text-center align-items-center">
                 <div class="w-100 text-white">
-                    <img class="img-fluid" src="images/logo_redondo_clanco.png" alt="logo cuadrado" title="logo cuadrado">
-                    <h1>Bienvenidos a Kustom Kulture Motorcycles</h1>
-                    <p>El buen gusto y el amor por los motores, se funden bajo tierra para hacer las mejores motos de la ciudad.</p>
+                    <img class="img-fluid tilt-in-fwd-tr" src="images/logo_redondo_clanco.png" alt="logo cuadrado" title="logo cuadrado">
+                    <div class="puff-in-center" >
+                        <h1>Bienvenidos a Kustom Kulture Motorcycles</h1>
+                        <p>El buen gusto y el amor por los motores, se funden bajo tierra para hacer las mejores motos de la ciudad.</p>
+                    </div>                    
                 </div>
             </div>
         </div>
     </section>
     <section class="row estilo__seccion">        
-        <a href="pages/nosotros.html#nuestrosProyectos"><h2>Custom Bikes</h2></a>
-        <div class="col-sm-12 col-md-6 col-lg-6">
+        <div data-aos="zoom-in" data-aos-duration="1000">
+            <a href="pages/nosotros.html#nuestrosProyectos"><h2>Custom Bikes</h2></a>
+        </div>
+        <div data-aos="fade-up-right" data-aos-duration="1500" class="col-sm-12 col-md-6 col-lg-6">
             <img class="img-fluid" src="images/hondacgl.JPG" alt="carrete deslizable" title="carrete deslizable">  
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-6">            
+        <div data-aos="fade-up-left" data-aos-duration="1500" class="col-sm-12 col-md-6 col-lg-6">            
             <h2>Honda CGL 125</h2>
             <p>
                 Desarmamos las ruedas y cambiamos los aros por unos más anchos para ponerle cubiertas de mayor rodado,
@@ -75,11 +80,13 @@
         </div>
     </section>
     <section class="row estilo__seccion">
-        <h2><a href="pages/nosotros.html">Nosotros</a></h2>
-        <div class="col-sm-12 col-md-6 col-lg-6"> 
+        <div data-aos="zoom-in" data-aos-duration="1000">
+            <h2><a href="pages/nosotros.html">Nosotros</a></h2>
+        </div>        
+        <div data-aos="flip-left" data-aos-duration="1500" class="col-sm-12 col-md-6 col-lg-6"> 
             <iframe width="560" height="315" src="https://www.youtube.com/embed/lSbXSUFiV4g?start=37" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-6">            
+        <div data-aos="flip-right" data-aos-duration="1500" class="col-sm-12 col-md-6 col-lg-6">            
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam harum dolorum cupiditate beatae architecto 
                 voluptatibus placeat maiores consectetur vitae nihil facere, temporibus sequi, repudiandae assumenda, quos 
@@ -105,6 +112,10 @@
         </div>          
     </footer>
 </div>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+    AOS.init();
+</script>
 <script src="js/bootstrap.bundle.js"></script>
 </body>
 </html>
