--- a/pages/kkulifestile.html
+++ b/pages/kkulifestile.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="contenedorPrincipal__LifeStyle">
-        <header>
+        <header data-aos="fade-down" data-aos-duration="1000">
             <nav class="navbar navbar-expand-lg navbar-expand-md bg-black">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="../index.html"><img src="../images/logo_chico.JPG" alt=""></a>
