--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="contenedorPrincipal">
-        <header>
+        <header data-aos="fade-down" data-aos-duration="1000">
             <nav class="navbar navbar-expand-lg navbar-expand-md bg-black">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="../index.html"><img src="../images/logo_chico.JPG" alt=""></a>
@@ -41,7 +41,7 @@
                 </div>
             </nav>
         </header>    
-    <div>        
+    <div>
         <section class="estilo__seccion">
             <h2>Nuestras Instalaciones</h2>
             <img class="img-fluid" src="../images/kkutaller1.JPG" alt="imagen taller 1" title="imagen taller1">
